# tools-lib_manager

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  LibInterface.h  LibManager.cpp  LibManager.h  Main.cpp
test/: CMakeLists.txt  test_Dummy.cpp
